Fix remoting_perftests build for ARM

While compiling chromium for chromeos, remoting_perftests fails to
build due to an attempt to return an rvalue

BUG=660541

Review-Url: https://codereview.chromium.org/2515813002
Cr-Commit-Position: refs/heads/master@{#433350}

Former-commit-id: 29bfbecb49572b61264de7acccf8b23942bba43d